--- a/plugins/tripleo-overcloud/main.yml
+++ b/plugins/tripleo-overcloud/main.yml
@@ -1,40 +1,8 @@
-- name: Perform pre install tasks
-  include: "{{ overcloud_pre | default('pre.yml') }}"
-  when: install.introspect|default('')
+- name: Overcloud install
+  include: "{{ overcloud_install | default('install.yml') }}"
+  when: not install.upgrade|default('')
 
-- name: Provision loadbalancer node
-  include: loadbalancer.yml
-  tags:
-      - loadbalancer
-      - loadbalancer_setup
-  when: "'loadbalancer' in groups"
+- name: Overcloud Upgrade
+  include: "{{ overcloud_upgrade | default('upgrade.yml') }}"
+  when: install.upgrade|default('')
 
-- name: Introspect our machines
-  include: "{{ overcloud_introspect | default('introspect.yml') }}"
-  when: install.introspect|default('')
-
-- name: Tag our machines with proper flavors
-  include: "{{ overcloud_flavors | default('tag.yml') }}"
-  when: install.tagging|default('')
-
-- name: Deploy the Overcloud
-  vars:
-      templates:
-          generate_host_name_template: yes
-          storage_add_scale: yes
-  include: "{{ overcloud_deploy | default('deploy.yml') }}"
-  # Remove "version" when gate is updated
-  when: (install.deploy|default('') or install.version|default('')) and not install.role|default('')
-
-- name: Deploy the Overcloud with composable roles
-  vars:
-      deploy_script_template: templates/composable_roles/overcloud_deploy.sh.j2
-      templates:
-          generate_host_name_template: no
-          storage_add_scale: no
-  include: "{{ composable_roles | default('composable_roles.yml') }}"
-  when: (install.deploy|default('') or install.version|default('')) and install.role is defined
-
-- name: Perform post install tasks
-  include: "{{ overcloud_post | default('post.yml') }}"
-  when: install.post|default('')
