TENANT_NAME was renamed to PROJECT_NAME in Ocata.
Look for PROJECT_NAME or TENANT_NAME in rc file of overcloud because
from Ocata TENANT_NAME was renamed to PROJECT_NAME

Change-Id: Ic8fca821238a6dbed58fe63cc65ad4e1bde5ee69

--- a/roles/installer/ospd/overcloud/credentials/tasks/main.yml
+++ b/roles/installer/ospd/overcloud/credentials/tasks/main.yml
@@ -6,7 +6,7 @@
   delegate_to: localhost
   register: oc_username
 
-- shell: "cat {{ overcloudrc }} | grep TENANT | cut -d '=' -f 2"
+- shell: "cat {{ overcloudrc }} | grep -E 'TENANT|PROJECT_NAME' | cut -d '=' -f 2"
   delegate_to: localhost
   register: oc_tenant
 
