--- a/plugins/tripleo-overcloud/build_templates.yml
+++ b/plugins/tripleo-overcloud/build_templates.yml
@@ -72,9 +72,9 @@
         # avoid empty strings
         when: "templates_list_file != ''"
 
-      - name: Enable external network access through newly created vlan interface on undercloud
+      - name: Enable routing through undercloud
         include: tasks/undercloud-ext-vlan.yml
-        when: "'hypervisor' not in groups and install.public.vlan"
+        when: "install.public.extrouter.undercloud"
 
       - include: tasks/append_script.yml
         when: not overcloud_deploy_script|default('')
