[virsh] Bridged network for Undercloud
Make Undercloud reachable without tunneling

This patch makes undercloud reachable get DHCP from hypervisor's LAN
on an extra NIC that will be used as default route.

Add bridged network to 3_nets_1_bridge.yml
Add bridged network creation according to guide

Changes to topology nodes:
* Convert interfaces from dict to list
* Use YAML anchor for external network refernce

TODO: bridged network will be added to nodes once upstream bug is fixed
https://bugs.launchpad.net/tripleo/+bug/1668180

Disk creation:
* Modify interfaces loop according to changes
* Add DEFROUTE to make external network default route

VM network ips:
* move old logic into "tunnled_network.yml"

Change-Id: I115911a5f491f3faac257b44607a44888997de53

--- a/plugins/virsh/defaults/topology/network/3_nets_1_bridge.yml
+++ b/plugins/virsh/defaults/topology/network/3_nets_1_bridge.yml
@@ -1,3 +1,5 @@
+# This topology will change the host's network, and might loose connectivity
+# Make sure you have an alternate way to access your host.
 ---
 networks:
     net1:
@@ -42,3 +44,6 @@ networks:
         floating_ip:
             start: "10.0.0.101"
             end: "10.0.0.150"
+    net4:
+        name: br1
+        forward: bridge
