--- a/plugins/virsh/defaults/topology/nodes/odl.yml
+++ b/plugins/virsh/defaults/topology/nodes/odl.yml
@@ -14,8 +14,8 @@ node_dict:
             size: "20G"
             cache: "unsafe"
     interfaces:
-        nic1:
-            network: "management"
-    external_network: management
+        - &external
+          network: management
+    external_network: *external
     groups:
         - odl_controller
