--- a/plugins/virsh/defaults/topology/network/3_nets_1_bridge.yml
+++ b/plugins/virsh/defaults/topology/network/3_nets_1_bridge.yml
@@ -42,3 +42,6 @@ networks:
         floating_ip:
             start: "10.0.0.101"
             end: "10.0.0.150"
+    net4:
+        name: br1
+        forward: bridge
