--- a/plugins/virsh/defaults/topology/nodes/ironic.yml
+++ b/plugins/virsh/defaults/topology/nodes/ironic.yml
@@ -15,13 +15,13 @@ node_dict:
             cache: "unsafe"
             preallocation: "metadata"
     interfaces:
-        nic1:
-            network: "data"
-        nic2:
-            network: "management"
-        nic3:
-            network: "external"
-    external_network: management
+        - network: "data"
+        - network: "management"
+        - network: "external"
+        - &external
+          network: br1
+          bridged: yes
+    external_network: *external
 
     groups:
       - undercloud
