WIP [virsh] Bridged network for Undercloud
Make Undercloud reachable without tunneling

This patch makes undercloud reachable get DHCP from hypervisor's LAN
on an extra NIC that will be used as default route.

Add bridged network to 3_nets.yml
Add bridged network creation according to guide
Bridged network will not be cleaned, but backup files are left on
machine

Changes to topology nodes:
* Convert interfaces from dict to list
* Use YAML anchor for external network refernce
* Add bridnged network for Undercloud

Disk creation:
* Modify interfaces loop according to changes
* Add DEFROUTE to make external network default route

VM network ips:
* move old logic into "tunnled_network.yml"

Change-Id: I115911a5f491f3faac257b44607a44888997de53

--- a/plugins/virsh/defaults/topology/network/3_nets.yml
+++ b/plugins/virsh/defaults/topology/network/3_nets.yml
@@ -44,3 +44,7 @@ networks:
         floating_ip:
             start: "10.0.0.101"
             end: "10.0.0.150"
+
+bridge:
+    # "br0" doesn't work for some reason
+    name: br1
