--- a/plugins/tripleo-undercloud/roles/rdo-release/tasks/rdo-release.yml
+++ b/plugins/tripleo-undercloud/roles/rdo-release/tasks/rdo-release.yml
@@ -25,10 +25,19 @@
   when: "mirror|default('')"
   become: true
 
-- name: gather repo file names to remove
+- name: gather repo file names to remove (not install.repos.patch)
   find:
       path: "{{ rr_target_directory }}"
   register: files_to_remove
+  when: not install.repos.patch
+
+- name: gather repo file names to remove (install.repos.patch)
+  find:
+      path: "{{ rr_target_directory }}"
+      patterns: '\b(?!((p)(a)(t)(c)(h)(e)(d)(_)(r)(p)(m)(s)(\.)(r)(e)(p)(o)))(\S+)'
+      use_regex: True
+  register: files_to_remove
+  when: install.repos.patch
 
 - name: remove all repo files
   file:
