--- a/plugins/tripleo-undercloud/roles/rhos-release/tasks/main.yml
+++ b/plugins/tripleo-undercloud/roles/rhos-release/tasks/main.yml
@@ -27,12 +27,18 @@
       path: "{{ rr_target_directory }}"
   register: files_to_remove
 
+
+- name: remove all repo files (except for patched RPMs)
+  shell: find /etc/yum.repos.d/ ! -name 'patched_rpms.repo' -type f -exec rm -f {} +
+  when: install.patch.repo == true 
+
 - name: remove all repo files
   file:
       state: absent
       path: "{{ item.path }}"
   with_items: "{{ files_to_remove.files|default([]) }}"
   become: true
+  when: install.patch.repo == false
 
 - name: get the rhos-release RPM
   get_url:
