Using patch-componenets plugin
tripleo-undercloud stage was updated to facilitate the usage of
patached componets plugin.

Change-Id: I01c9c88e867732ac8ea24f98f18050e9775930b0

--- a/plugins/packstack/roles/rhos-release/tasks/main.yml
+++ b/plugins/packstack/roles/rhos-release/tasks/main.yml
@@ -39,9 +39,11 @@
   when: "mirror is defined and mirror"
   become: true
 
-- name: gather repo file names to remove
+- name: gather repo file names to remove (all but patched_repos.repo)
   find:
       path: "{{ rr_target_directory }}"
+      patterns: '\b(?!((p)(a)(t)(c)(h)(e)(d)(_)(r)(p)(m)(s)(\.)(r)(e)(p)(o)))(\S+)'
+      use_regex: True
   register: files_to_remove
 
 - name: remove all repo files
