--- a/plugins/tripleo-undercloud/roles/rhos-release/tasks/main.yml
+++ b/plugins/tripleo-undercloud/roles/rhos-release/tasks/main.yml
@@ -29,9 +29,11 @@
   when: "mirror|default('')"
   become: true
 
-- name: gather repo file names to remove
+- name: gather repo file names to remove (all but patched_rpms.repo)
   find:
       path: "{{ rr_target_directory }}"
+      patterns: '\b(?!((p)(a)(t)(c)(h)(e)(d)(_)(r)(p)(m)(s)(\.)(r)(e)(p)(o)))(\S+)'
+      use_regex: True
   register: files_to_remove
 
 - name: remove all repo files
