Modifes external sotrage in tripleo-overcloud
Changed the type of 'storage-external' in 'plugin.spec' of
'tripleo-overcloud' plugin from 'Bool' to 'Value'.
If one want to use an external storage, he will need to provide the name
of a var (YAML) file contains the relevant data for that storage.

Change-Id: I43c42d79564ff951a224d43d9f8587bcf10f0f15

--- a/plugins/tripleo-overcloud/tasks/storage/swift.yml
+++ b/plugins/tripleo-overcloud/tasks/storage/swift.yml
@@ -16,7 +16,7 @@
           line: '--swift-storage-flavor {% if groups["swift"] is defined %}swift{% else %}baremetal{% endif %} \'
       when: "templates.storage_add_scale|default(True)"
 
-  when: not install.storage.external
+  when: install.storage.external is not defined
   vars:
       storage_nodes: "{{ (install.storage.nodes|default(0)) or (groups['ceph']|default([])|length) or 1 }}"
 
