--- a/plugins/tripleo-overcloud/tasks/storage/ceph.yml
+++ b/plugins/tripleo-overcloud/tasks/storage/ceph.yml
@@ -16,7 +16,7 @@
           line: '--ceph-storage-flavor {% if groups["ceph"] is defined %}ceph{% else %}baremetal{% endif %} \'
       when: "templates.storage_add_scale | default(True)"
 
-  when: "not install.storage.external"
+  when: install.storage.external is not defined
   vars:
       storage_nodes: "{{ (install.storage.nodes|default(0)) or (groups['ceph']|default([])|length) or 1 }}"
 
