--- a/plugins/tripleo-overcloud/tasks/storage/netapp.yml
+++ b/plugins/tripleo-overcloud/tasks/storage/netapp.yml
@@ -1,13 +1,17 @@
-# We currently only support external netapp
-- block:
-    - name: Prepare NetApp storage template
-      template:
-          src: "storage/netapp.yml.j2"
-          dest: "{{ template_base }}/cinder-netapp-config.yaml"
-          mode: 0755
+---
+- name: Include external storage file
+  include_vars: "vars/storage/external/{{ install.storage.external }}.yml"
+  when: install.storage.external is defined
 
-    - name: Append the storage NetApp custom template line to the base overcloud deploy script
-      lineinfile:
-          dest: "~/overcloud_deploy.sh"
-          line: '-e {{ template_base }}/cinder-netapp-config.yaml \'
-  when: install.storage.external
+- name: Prepare NetApp storage template
+  template:
+      src: "storage/netapp.yml.j2"
+      dest: "{{ template_base }}/cinder-netapp-config.yaml"
+      mode: 0755
+  when: install.storage.external is defined
+
+- name: Append the storage NetApp custom template line to the base overcloud deploy script
+  lineinfile:
+      dest: "~/overcloud_deploy.sh"
+      line: '-e {{ template_base }}/cinder-netapp-config.yaml \'
+  when: install.storage.external is defined
