WIP [tripleo-undercloud] Reachable UI
Undercloud should listen on ansible-reachable NIC instead of PXE network.
Make undercloud.conf a template
SSL certificate should have the same jinja template as underlcoud.conf
for public_vip

Add bridged NIC to "ironic" node

This can't work until bug is fixed:
https://bugs.launchpad.net/tripleo/+bug/1668180
https://bugzilla.redhat.com/show_bug.cgi?id=1427046

Change-Id: Ibd94a04e6b32e83b22a71aa628171a9ce6ba5eba

--- a/plugins/tripleo-undercloud/tasks/ssl.yml
+++ b/plugins/tripleo-undercloud/tasks/ssl.yml
@@ -6,7 +6,8 @@
 #      name: ssl
 
 - name: grab undercloud_public_vip from undercloud.conf
-  command: 'awk -F= "/^undercloud_public_vip\s*=\s*/ {print $2}" ~/undercloud.conf'
+  command: |
+      awk -F= "/^undercloud_public_{{ (install.version|openstack_release <= 10) | ternary('vip', 'host') }}\s*=\s*/ {print $2}" ~/undercloud.conf
   register: awk_undercloud_public_vip
 
 - name: create cert directory
