--- a/plugins/virsh/defaults/topology/nodes/ironic.yml
+++ b/plugins/virsh/defaults/topology/nodes/ironic.yml
@@ -16,9 +16,11 @@ node_dict:
             preallocation: "metadata"
     interfaces:
         - network: "data"
-        - &external
-          network: "management"
+        - network: "management"
         - network: "external"
+        - &external
+          network: br1
+          bridged: yes
     external_network: *external
 
     groups:
