--- a/plugins/tripleo-undercloud/templates/undercloud.conf
+++ b/plugins/tripleo-undercloud/templates/undercloud.conf
@@ -6,7 +6,7 @@ local_interface = eth0
 # 192.168.24.0 subnet is by default used since RHOS11
 local_ip = 192.168.24.1/24
 network_gateway = 192.168.24.1
-undercloud_public_vip = 192.168.24.2
+undercloud_public_{% if install.version|openstack_release <= 10 %}vip{% else %}host{% endif %} = {{ ansible_ssh_host }}
 undercloud_admin_vip = 192.168.24.3
 network_cidr = 192.168.24.0/24
 masquerade_network = 192.168.24.0/24
