--- a/plugins/tripleo-undercloud/vars/topology/undercloud.yml
+++ b/plugins/tripleo-undercloud/vars/topology/undercloud.yml
@@ -17,9 +17,11 @@ undercloud_node:
             preallocation: "metadata"
     interfaces:
         - network: "data"
-        - &external
-          network: "management"
+        - network: "management"
         - network: "external"
+        - &external
+          network: br1
+          bridged: yes
     external_network: *external
 
     groups:
