rhos-release: clean previous mirror ip
use-mirror overrides rpm download server hostname to ip of mirror,
when it is reconfiguring system for mirror usage.

in case mirror ip changes, it needs to drop this override,
before any of:
- deploying yum repositories and not using mirror
- deploying repos when using mirror:
- - before doing mirror-alive test (could end up testing old ip)
- - resolving mirror ip again (would still end-up with old ip as
    override is in place)

Change-Id: I633e03c542d58a7a884e5a192bbdba93e44df01f

--- a/plugins/packstack/roles/rhos-release/tasks/main.yml
+++ b/plugins/packstack/roles/rhos-release/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+
+- name: ensure previous repo mirror config is removed
+  become: true
+  lineinfile:
+      dest: '/etc/hosts'
+      regexp: '.* (download\.lab.*redhat\.com|rhos-qe-mirror).*'
+      state: absent
+
 - set_fact:
     rr_download_fqdn: ''
     rr_distro_version: "{{ rr_distro_version | default(ansible_distribution_version) }}"
