--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 setuptools>=11.3
 shade==1.19.0
-ansible==2.1.3.0,!=2.2.0.0
+ansible>=2.3.0.0,<2.4.0.0
 colorlog>=2.7.0
 PyYAML>=3.11
 netaddr >= 0.7.18
