[test risk] Bump Ansible version to 2.3.0.0
RHOSINFRA-867
RHOSINFRA-456
RHOSINFRA-432

Change-Id: I6cf65eccf75d3511ee502f80005118463e43d426
Signed-off-by: Sorin Sbarnea <ssbarnea@redhat.com>

--- a/plugins/tripleo-undercloud/configure.yml
+++ b/plugins/tripleo-undercloud/configure.yml
@@ -14,13 +14,17 @@
                 False
                 {%- endif -%}"
   tasks:
+      - name: display local_src
+        debug:
+          msg: "{{ local_src }}"
+
       - name: template the undercloud.conf from local machine
         template:
             src: "{{ local_src }}"
             dest: ~/undercloud.conf
             force: yes
             mode: 0755
-        when: local_src
+        when: local_src is defined and local_src != False
 
       - name: copy default undercloud config
         copy:
