--- a/plugins/tripleo-overcloud/roles/rhos-release/tasks/main.yml
+++ b/plugins/tripleo-overcloud/roles/rhos-release/tasks/main.yml
@@ -53,6 +53,7 @@
   package:
       name: /tmp/rhos-release-latest.rpm
       state: present
+      use: rpm
   become: true
 
 - name: remove rhos-release repos if needed
