--- a/plugins/tripleo-undercloud/roles/rdo-release/tasks/rdo-release.yml
+++ b/plugins/tripleo-undercloud/roles/rdo-release/tasks/rdo-release.yml
@@ -44,6 +44,7 @@
   package:
       name: /tmp/rhos-release-latest.rpm
       state: present
+      use: rpm
   become: true
 
 - name: remove rhos-release repos if needed
