[test risk] Bump Ansible version to 2.2.1
Change-Id: I6cf65eccf75d3511ee502f80005118463e43d426

--- a/plugins/virsh/prepare_hypervisor.yml
+++ b/plugins/virsh/prepare_hypervisor.yml
@@ -67,6 +67,7 @@
           - "{{ inventory_dir }}/id_rsa"
           - "{{ inventory_dir }}/id_rsa.pub"
       delegate_to: localhost
+      when: not provision.cleanup|default(False)
 
     - name: Set up authorized_keys for the deploy user
       authorized_key:
