--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 setuptools>=11.3
 shade==1.19.0
-ansible==2.1.3.0,!=2.2.0.0
+ansible>=2.2.2.0,<2.3.0.0
 colorlog>=2.7.0
 PyYAML>=3.11
 netaddr >= 0.7.18
 requests!=2.12.2,!=2.13.0,>=2.10.0
 terminaltables>=3.1.0
+pbr==2.0.0
 Jinja2>=2.8.0 # avoid exception due to use of 'equalto', like openstack_servers
