[test risk] Bump Ansible version to 2.2.1
Change-Id: I6cf65eccf75d3511ee502f80005118463e43d426
Signed-off-by: Sorin Sbarnea <ssbarnea@redhat.com>

--- a/plugins/virsh/prepare_hypervisor.yml
+++ b/plugins/virsh/prepare_hypervisor.yml
@@ -72,5 +72,7 @@
       authorized_key:
           user: root
           key: "{{ item }}"
-      with_file:
-        - "{{ inventory_dir }}/id_rsa.pub"
+      with_first_found:
+          - files:
+            - "{{ inventory_dir }}/id_rsa.pub"
+            skip: true
