Tempest: optional cleanup of the resources
Always initialize the `tempest cleanup` command and save the generated
file, but remove the uncleaned resources only if requiested.

Change-Id: I4a4bd5b2118cff88d6455ac4cda6c345fc77614b

--- a/plugins/tempest/tasks/configure/run.yml
+++ b/plugins/tempest/tasks/configure/run.yml
@@ -40,6 +40,16 @@
       chdir: "{{ config_dir | default('~/' + test.dir) }}"
   register: config_result
 
+
+- name: Save the current state for the later cleanup
+  shell: >
+      test -e .venv/bin/activate && source .venv/bin/activate;
+      tempest cleanup --init-saved-state
+  args:
+      executable: /bin/bash
+      chdir: "{{ test.dir }}"
+
+
 - name: Print configuration cmd
   debug:
         var: config_result.cmd
