--- a/plugins/collect-logs/vars/default_archives_list.yml
+++ b/plugins/collect-logs/vars/default_archives_list.yml
@@ -13,6 +13,7 @@ archives_list:
     - /home/stack/tempest/*.log
     - /home/stack/tempest/*.xml
     - /home/stack/tempest/etc/*.conf
+    - /home/stack/tempest/saved_state.json
     - /home/stack/virt
     - /root/
     - /usr/share/openstack-tripleo-heat-templates
