WIP - update the overcloud images so they match puddle
RHOSINFRA-293

Change-Id: I06e2a88263309fa4d257713fe74a72b96c20b3f8

--- a/plugins/tripleo-undercloud/images.yml
+++ b/plugins/tripleo-undercloud/images.yml
@@ -20,6 +20,8 @@
   gather_facts: no
   any_errors_fatal: true
   tags: images
+  vars_files:
+      - vars/topology/undercloud.yml
   vars:
       images_source: "{{ install.images.url|default('') }}"
       images_dest: ~/base_image.qcow2
@@ -41,7 +43,7 @@
       - name: modify images - update to core build and install packages
         include: tasks/images/repos.yml
         # update is a func name (dict.update) so it must be used as str explicitly
-        when: "{{ install.images.repos or install.images.packages|default('') }}"
+        when: "{{ install.images.repos or install.images.packages|default('') or install.images['update'] }}"
 
       - name: upload the overcloud images to glance
         shell: |
