--- a/plugins/tripleo-undercloud/tasks/images/repos.yml
+++ b/plugins/tripleo-undercloud/tasks/images/repos.yml
@@ -19,6 +19,7 @@
       # explicitly avoid director packages for images
       director: no
       target_directory: "{{ tmp_oc_repos_dir }}"
+      source_hostname: "{{ (selected_mirror|default({})).get('stdout', '')|trim }}"
       # Assume images distro is the same as undercloud
   register: command_result
   until: command_result.stderr.find('Connection reset by peer') == -1
@@ -33,3 +34,5 @@
   when: install.images.packages|default(None) != None
 
 # Don't use virt-customize to update images. It's unreliable.
+- command: "virt-customize -a {{ overcloud_image_file }} --update -m {{ (undercloud_node.memory|int/2)|int }} --smp {{ (undercloud_node.cpu|int/2)|int }}  --selinux-relabel"
+  when: install.images['update']
