--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 setuptools>=11.3
 pytz>=2016.3
+# remove these when shade is bumped to 1.15+
+openstacksdk == 0.9.13
+stevedore == 1.20.0
+oslo.config == 3.22.0
+oslo.i18n == 3.12.0
+oslo.serialization == 2.16.0
+oslo.utils == 3.22.0
+debtcollector == 1.11.0
 # shade bug has bad info on floating ips
 # https://storyboard.openstack.org/#!/story/2000845
 shade==1.7.0
