v1: fix public net routing for packstack-aio
In case of AIO packstack setups,
we cannot depend on outter network to work correctly,
we do not want to route requests for our floating-ips
from controller to outside and hope they will go back
correctly (e.g. broken mtu on outer networks).

RHOSINFRA-447

Change-Id: I359c2b3da23ee2b435cbac27c8958095012f474e

--- a/playbooks/installer/packstack/post/create_external_network.yml
+++ b/playbooks/installer/packstack/post/create_external_network.yml
@@ -117,3 +117,14 @@
             allocation_pool_start: "{{ pool.start|default(p_pool_start or omit) }}"
             allocation_pool_end: "{{ pool.end|default(p_pool_end or omit) }}"
         register: subnet_create
+
+
+        # in AIO, outer network may not be correctly prepared for routing our FlIP ranges etc (or have broken mtu's)
+        # ensure our communication stays inside
+      - name: self-contained public network for AIO case
+        shell: |
+            set -ex
+            source /root/keystonerc_admin;
+            ip a add $(echo -n "$(openstack subnet show external_subnet -f value -c gateway_ip)"; openstack subnet show external_subnet -f value -c cidr | sed 's|.*/|/|') dev br-myphysnet; ip l set br-myphysnet up;
+        become: yes
+        when: controller[0] == tester[0]
