Pin openstackclient requirement
Fixes problem with the requirements conflict

Change-Id: I39b5df9bdac379866c89873d62a134bb3f0efad5

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pytz>=2016.3
 # https://storyboard.openstack.org/#!/story/2000845
 shade==1.7.0
 # pin shade req
+python-openstackclient==3.8.1
 openstacksdk == 0.9.13
 stevedore == 1.20.0
 oslo.config == 3.22.0
