Add new flag to tempest plugin: --config-flags
It will add the flag to tempest config invocation.

Change-Id: Ie292532baacc14fd2c7f19766fa0a2af54da72b6

--- a/plugins/tempest/tasks/configure/run.yml
+++ b/plugins/tempest/tasks/configure/run.yml
@@ -26,6 +26,7 @@
               --debug \
               -v \
               --create \
+              {{ test.config.flags | default(omit) }} \
               identity.uri $OS_AUTH_URL \
               identity.admin_password $OS_PASSWORD \
               scenario.img_dir ~/{{ test.dir }}/etc \
