Remove dvr from tempest.conf
* python-tempestconf provides network.remove-extension
  which removes an extension which is not enabled
  so most of the jobs are not having dvr configured
  so removing it.

Change-Id: Ie292532baacc14fd2c7f19766fa0a2af54da72b6

--- a/plugins/tempest/tasks/configure/run.yml
+++ b/plugins/tempest/tasks/configure/run.yml
@@ -28,6 +28,7 @@
               --create \
               identity.uri $OS_AUTH_URL \
               identity.admin_password $OS_PASSWORD \
+              network.network.remove-extension dvr
               scenario.img_dir ~/{{ test.dir }}/etc \
               {# config options #}
               {% for section_name,options in config_options.iteritems() %}
