--- a/plugins/tempest/tasks/configure/run.yml
+++ b/plugins/tempest/tasks/configure/run.yml
@@ -28,6 +28,9 @@
               --create \
               identity.uri $OS_AUTH_URL \
               identity.admin_password $OS_PASSWORD \
+              {% if test.openstack.version|int > 10 and not install.network.dvr %}
+              network.remove-extension {{ test.config-flags }} \
+              {% endif %}
               scenario.img_dir ~/{{ test.dir }}/etc \
               {# https://bugzilla.redhat.com/show_bug.cgi?id=1382048 #}
               {# https://github.com/openstack/tripleo-heat-templates/commit/9b739012b71e2833e59e94cbe423cda77405c6cb#diff-2df80226aa5ac8fe81e6159bda8d4d2f #}
