Modified project settings

--- a/project.config
+++ b/project.config
@@ -43,6 +43,7 @@
 	createTag = +force group rhosqeauto-stable
 	createSignedTag = group rhosqeauto-stable
 [project]
+	state = hidden
 [receive]
 	requireChangeId = true
 	createNewChangeForAllNotInTarget = true
