--- a/plugins/tempest/vars/tests/odl10.yml
+++ b/plugins/tempest/vars/tests/odl10.yml
@@ -1,40 +1,46 @@
 ---
-test_dict:
-    test_regex: ''
-    whitelist:
-        - tempest.api.network
-        - tempest.scenario..*network
-        - "^neutron.tests.tempest.*"
-    blacklist:
-        - tempest.scenario.test_network_v6.TestGettingAddress.test_dualnet_multi_prefix_dhcpv6_stateless
-        - tempest.scenario.test_network_v6.TestGettingAddress.test_dualnet_multi_prefix_slaac
-        - tempest.scenario.test_network_v6.TestGettingAddress.test_multi_prefix_dhcpv6_stateles
-        - tempest.scenario.test_network_v6.TestGettingAddress.test_multi_prefix_slaac
-        - tempest.scenario.test_network_v6.TestGettingAddress.test_dhcp6_stateless_from_os
-        - tempest.scenario.test_network_v6.TestGettingAddress.test_dualnet_dhcp6_stateless_from_os
-        - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_create_delete_subnet_with_allocation_pools
-        - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_create_delete_subnet_with_default_gw
-        - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_create_delete_subnet_with_host_routes_and_dns_nameservers
-        - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_create_list_subnet_with_no_gw64_one_network
-        - tempest.api.network.test_dhcp_ipv6.NetworksTestDHCPv6.test_dhcpv6_64_subnet
-        - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_create_delete_subnet_with_gw
-        - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_create_delete_subnet_all_attributes
-        - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_delete_network_with_subnet
-        - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_update_subnet_gw_dns_host_routes_dhcp
-        - tempest.api.network.test_networks.NetworksIpV6TestJSON
-        - tempest.api.network.test_networks.BulkNetworkOpsIpV6TestJSON.test_bulk_create_delete_network
-        - tempest.api.network.test_networks.BulkNetworkOpsIpV6TestJSON.test_bulk_create_delete_subnet
-        - tempest.api.network.test_networks.BulkNetworkOpsIpV6TestJSON.test_bulk_create_delete_port
-        - tempest.scenario.test_network_v6.TestGettingAddress.test_dualnet_multi_prefix_dhcpv6_stateless
-        - tempest.scenario.test_network_v6.TestGettingAddress.test_dualnet_multi_prefix_slaac
-        - tempest.scenario.test_network_v6.TestGettingAddress.test_dualnet_slaac_from_os
-        - tempest.scenario.test_network_v6.TestGettingAddress.test_multi_prefix_dhcpv6_stateless
-        - tempest.scenario.test_network_v6.TestGettingAddress.test_multi_prefix_slaac
-        - tempest.scenario.test_network_v6.TestGettingAddress.test_slaac_from_os
-        - tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_update_instance_port_admin_state
-        - tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_update_router_admin_state
-    plugins:
-        neutron:
-            repo: "https://github.com/openstack/neutron.git"
-            package: "python-neutron-tests"
-
+test_regex: ''
+  whitelist:
+    - tempest.api.network
+    - tempest.scenario..*network
+    - "^neutron.tests.tempest.*"
+  blacklist:
+    - tempest.scenario.test_network_v6.TestGettingAddress.test_dualnet_multi_prefix_dhcpv6_stateless
+    - tempest.scenario.test_network_v6.TestGettingAddress.test_dualnet_multi_prefix_slaac
+    - tempest.scenario.test_network_v6.TestGettingAddress.test_multi_prefix_dhcpv6_stateles
+    - tempest.scenario.test_network_v6.TestGettingAddress.test_multi_prefix_slaac
+    - tempest.scenario.test_network_v6.TestGettingAddress.test_dhcp6_stateless_from_os
+    - tempest.scenario.test_network_v6.TestGettingAddress.test_dualnet_dhcp6_stateless_from_os
+    - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_create_delete_subnet_with_allocation_pools
+    - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_create_delete_subnet_with_default_gw
+    - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_create_delete_subnet_with_host_routes_and_dns_nameservers
+    - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_create_list_subnet_with_no_gw64_one_network
+    - tempest.api.network.test_dhcp_ipv6.NetworksTestDHCPv6.test_dhcpv6_64_subnet
+    - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_create_delete_subnet_with_gw
+    - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_create_delete_subnet_all_attributes
+    - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_delete_network_with_subnet
+    - tempest.api.network.test_networks.NetworksIpV6TestJSON.test_update_subnet_gw_dns_host_routes_dhcp
+    - tempest.api.network.test_networks.NetworksIpV6TestJSON
+    - tempest.api.network.test_networks.BulkNetworkOpsIpV6TestJSON.test_bulk_create_delete_network
+    - tempest.api.network.test_networks.BulkNetworkOpsIpV6TestJSON.test_bulk_create_delete_subnet
+    - tempest.api.network.test_networks.BulkNetworkOpsIpV6TestJSON.test_bulk_create_delete_port
+    - tempest.scenario.test_network_v6.TestGettingAddress.test_dualnet_multi_prefix_dhcpv6_stateless
+    - tempest.scenario.test_network_v6.TestGettingAddress.test_dualnet_multi_prefix_slaac
+    - tempest.scenario.test_network_v6.TestGettingAddress.test_dualnet_slaac_from_os
+    - tempest.scenario.test_network_v6.TestGettingAddress.test_multi_prefix_dhcpv6_stateless
+    - tempest.scenario.test_network_v6.TestGettingAddress.test_multi_prefix_slaac
+    - tempest.scenario.test_network_v6.TestGettingAddress.test_slaac_from_os
+    - tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_update_instance_port_admin_state
+    - tempest.scenario.test_network_basic_ops.TestNetworkBasicOps.test_update_router_admin_state
+    - neutron.tests.tempest.scenario.test_dvr.*
+    - neutron.tests.tempest.api.test_revisions.TestRevisions.test_update_subnet_bumps_network_revision
+    - neutron.tests.tempest.api.test_revisions.TestRevisions.test_update_subnet_bumps_revision
+    - neutron.tests.tempest.api.test_revisions.TestRevisions.test_update_subnet_bumps_revision
+    - neutron.tests.tempest.api.test_revisions.TestRevisions.test_update_subnet_service_types_bumps_revisions
+    - neutron.tests.tempest.api.test_routers.RoutersTest.test_router_interface_status
+    - neutron.tests.tempest.api.test_routers.RoutersIpV6Test.test_router_interface_status
+    - neutron.tests.tempest.api.admin.test_routers_flavors.RoutersFlavorTestCase
+  plugins:
+    neutron:
+        repo: "https://github.com/openstack/neutron.git"
+        version: "stable/newton"
