Set neutron quotas to 500 for overcloud
Neutron API tests (test_revision) are creating more networks
than allowed by default (17 > 10).

This change sets the default neutorn quotas to 500.

Change-Id: I8237814263dc8b3b7661064738f60a84dd02d330

--- a/plugins/tripleo-overcloud/post.yml
+++ b/plugins/tripleo-overcloud/post.yml
@@ -4,6 +4,10 @@
       - fetch_deploy_input
       - deploy
 
+# Temporary hack. Should be removed once there is an upstream solution in tempest or neutron.
+- include: post/update_quotas.yml
+  tags: neutron_quotas
+
 - include: create_external_network.yml
   tags:
       - public_network
