--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
 setuptools>=11.3
 pytz>=2016.3
-# shade bug has bad info on floating ips
-# https://storyboard.openstack.org/#!/story/2000845
-shade==1.7.0
+shade==1.16.0
 # pin shade req
 python-openstackclient==3.8.1
-openstacksdk == 0.9.13
+# openstacksdk == 0.9.13
 stevedore == 1.20.0
 oslo.config == 3.22.0
 oslo.i18n == 3.12.0
 oslo.serialization == 2.16.0
 oslo.utils == 3.22.0
 debtcollector == 1.11.0
+keystoneauth1==2.18.0
 # end of shade req remove these when shade is bumped to 1.15+
 ansible==2.1.3.0,!=2.2.0.0
 colorlog>=2.7.0
@@ -19,4 +18,3 @@ PyYAML>=3.11
 netaddr >= 0.7.18
 requests>=2.9.1
 terminaltables>=3.1.0
-keystoneauth1==2.18.0
