--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,4 @@ yamlordereddictloader>=0.1.1
 requests>=2.9.1
 Babel!=2.3.0,!=2.3.1,!=2.3.2,!=2.3.3,>=1.3
 keystoneauth1==2.18.0
+python-cinderclient==1.11.0
