--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skipsdist = True
-envlist = py27,pep8,py35,ansible-lint,any-errors-fatal
+envlist = py27,pep8,py35,ansible-lint,any-errors-fatal,cli
 
 [testenv]
 usedevelop = True
@@ -81,3 +81,8 @@ whitelist_externals =
     /bin/bash
     /usr/bin/bash
 commands = bash -c 'cd docs; make clean; make html'
+
+[testenv:cli]
+deps = {toxinidir}
+install_command = pip install {packages}
+commands = infrared plugin add all
