Removes all existing VBMCs before adding new ones
Added a task in the 'ironic_pxe_ipmitool' playbook of the
triple0-overcloud plugin which remove all existing virtual BMCs before
adding new onces.
Solved the failure caused by existing domains in vbmc.

Change-Id: I6af9103cf6d43a3dc5e634b43ca80f9a2776368b

--- a/plugins/tripleo-overcloud/tasks/ironic_pxe_ipmitool.yml
+++ b/plugins/tripleo-overcloud/tasks/ironic_pxe_ipmitool.yml
@@ -13,6 +13,9 @@
             - python-virtualbmc
             - ipmitool
 
+      - name: Remove existing Vitrual BMCs
+        shell: for vbmc_node in `vbmc list | grep ^\| | grep -v 'Domain' | awk {'print $2'}`; do vbmc delete $vbmc_node; done
+
 - name: Configure vbmc (ironic's 'pxe_ipmitool' driver)
   hosts: openstack_nodes
   vars:
