--- a/plugins/tripleo-overcloud/tasks/ironic_pxe_ipmitool.yml
+++ b/plugins/tripleo-overcloud/tasks/ironic_pxe_ipmitool.yml
@@ -10,11 +10,20 @@
             name: "{{ item }}"
             state: latest
         with_items:
+            - python-setuptools
             - python-virtualbmc
             - ipmitool
 
+      - name: Remove existing Virtual BMCs
+        # grab only lines with port number (more than 2 digits)
+        shell: |
+            for node in `vbmc list | awk '/[0-9]{2}/ {print $2}'`
+            do
+                vbmc delete ${node}
+            done
+
 - name: Configure vbmc (ironic's 'pxe_ipmitool' driver)
-  hosts: openstack_nodes
+  hosts: overcloud_nodes
   vars:
       vbmc_start_port: 6230
   gather_facts: False
@@ -23,11 +32,20 @@
   tasks:
       - name: Define vbmc_port for each VM
         set_fact:
-            vbmc_port: "{{vbmc_start_port + groups.openstack_nodes.index(inventory_hostname) }}"
+            vbmc_port: "{{vbmc_start_port + groups.overcloud_nodes.index(inventory_hostname) }}"
 
       - name: vbmc ports
         debug:
             msg: "{{inventory_hostname}}: {{vbmc_port}}"
+
+      - name: allow access to port {{ vbmc_port }} from undercloud
+        become: True
+        shell: |
+          iptables -I INPUT 1 -w 3 -s {{ hostvars['undercloud-0'].ansible_default_ipv4.address }} -p {{ item }} --dport {{ vbmc_port }} -j ACCEPT
+        with_items:
+          - 'udp'
+          - 'tcp'
+        delegate_to: hypervisor
 
       - name: Add nodes to vbmc
         command: "vbmc add {{ inventory_hostname }} --port {{ vbmc_port }}"
