--- a/plugins/tripleo-overcloud/tasks/ironic_pxe_ipmitool.yml
+++ b/plugins/tripleo-overcloud/tasks/ironic_pxe_ipmitool.yml
@@ -10,11 +10,20 @@
             name: "{{ item }}"
             state: latest
         with_items:
+            - python-setuptools
             - python-virtualbmc
             - ipmitool
 
+      - name: Remove existing Virtual BMCs
+        # grab only lines with port number (more than 2 digits)
+        shell: |
+            for node in `vbmc list | awk '/[0-9]{2}/ {print $2}'`
+            do
+                vbmc delete ${node}
+            done
+
 - name: Configure vbmc (ironic's 'pxe_ipmitool' driver)
-  hosts: openstack_nodes
+  hosts: overcloud_nodes
   vars:
       vbmc_start_port: 6230
   gather_facts: False
@@ -23,7 +32,7 @@
   tasks:
       - name: Define vbmc_port for each VM
         set_fact:
-            vbmc_port: "{{vbmc_start_port + groups.openstack_nodes.index(inventory_hostname) }}"
+            vbmc_port: "{{vbmc_start_port + groups.overcloud_nodes.index(inventory_hostname) }}"
 
       - name: vbmc ports
         debug:
