--- a/plugins/tripleo-overcloud/tasks/ironic_pxe_ipmitool.yml
+++ b/plugins/tripleo-overcloud/tasks/ironic_pxe_ipmitool.yml
@@ -10,8 +10,12 @@
             name: "{{ item }}"
             state: latest
         with_items:
+            - python-setuptools
             - python-virtualbmc
             - ipmitool
+
+      - name: Remove existing Virtual BMCs
+        shell: for vbmc_node in `vbmc list | grep ^\| | grep -v 'Domain' | awk {'print $2'}`; do vbmc delete $vbmc_node; done
 
 - name: Configure vbmc (ironic's 'pxe_ipmitool' driver)
   hosts: openstack_nodes
