Bring back old shade
new shade requires changes to floating ip, TBA

Change-Id: I8726898e44207dbaf39516bdc3aeaa37f5058624

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 setuptools>=11.3
-shade==1.16.0
+# shade bug has bad info on floating ips
+# https://storyboard.openstack.org/#!/story/2000845
+shade==1.7.0
 # pin shade req
 python-openstackclient==3.8.1
 python-cinderclient==1.11.0
